# tensor_store

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  diary.md  project_plan.tex
benches/: README.md  safetensors.rs  serverlessllm.rs
bindings/python/: README.md  pyproject.toml
bindings/python/benchmarks/: AGENTS.md  README.md  bench_safetensors.py  bench_serverlessllm.py  bench_vllm.py  conftest.py  fixtures.py  hub_model.py  vllm_loaders.py  vllm_runner.py
bindings/python/examples/: README.md  pytorch.py  tensorflow.py  vllm_infer.py
bindings/python/rust_ext/: Cargo.toml
bindings/python/rust_ext/src/: errors.rs  lib.rs
bindings/python/rust_ext/src/api/: convert.rs  mod.rs  safetensors.rs  serverlessllm.rs
bindings/python/rust_ext/src/convert/: mod.rs  tensorflow.rs  torch.rs
bindings/python/tensor_store_py/: __init__.py  tensorflow.py  torch.py
bindings/python/tensora/: __init__.py
bindings/python/tests/: conftest.py  fixtures.py
bindings/python/tests/integration/: __init__.py
bindings/python/tests/integration/safetensors/: test_pytorch.py  test_safetensors.py  test_tensorflow.py  test_tensorflow_save.py  test_torch_save.py
bindings/python/tests/integration/serverlessllm/: test_pytorch.py  test_serverlessllm.py
bindings/python/tests/unit/: __init__.py  test_api.py  test_vllm_loaders.py
bindings/python/tests/unit/safetensors/: test_safetensors.py
bindings/python/tests/unit/serverlessllm/: test_serverlessllm.py
paper/: PRIMEarxiv.sty  main.aux  main.blg  main.tex
profiling/: safetensors_reader.rs  serverlessllm_reader.rs
(+132 files in other folders)
